исправил недочёты в тестовом задании

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 и такси с Яндекс Go, покупки и заказы в других сервисах Яндекса
               </p>
             </div>
-            <img src="./img/samokat-1.png" alt="" />
+            <img class="hidden" src="./img/samokat-1.png" alt="" />
           </div>
         </div>
       </section>
